Adding label for recaptcha

--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -68,8 +68,12 @@ app--form no-hero
                                                 <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">{{ field.label }} {% if field.field.required %} <span class="form-item__required">*</span>{% endif %}</label>
                                             {% else %}
                                                 <{% if widget_type == 'checkbox_select_multiple' %}legend{% else %}label for="{{ field.id_for_label }}"{% endif %} class="form-item__label {% if field.field.required %}required{% endif %}">
-                                                    {{ field.label }}
-                                                    {% if field.field.required %} <span class="form-item__required">*</span>{% endif %}
+                                                    {% if field_type == 're_captcha_field' %}
+                                                        reCaptcha
+                                                    {% else %}
+                                                        {{ field.label }}
+                                                    {% endif %}
+                                                    {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}
                                                 </{% if widget_type == 'checkbox_select_multiple' %}legend{% else %}label{% endif %}>
                                                 {% if widget_type == 'checkbox_select_multiple' %}<p class="form-item__instruction">{{ field.help_text|default:'Select all that apply' }}</p>{% endif %}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}<div class="{{ widget_type }}">{% endif %}
