Code review points

--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -73,7 +73,7 @@ app--form no-hero
                                                     {% else %}
                                                         {{ field.label }}
                                                     {% endif %}
-                                                    {% if field.field.required %}<span class="form-item__required">*</span>{% endif %}
+                                                    {% if field.field.required %}<span aria-hidden="true" class="form-item__required">*</span>{% endif %}
                                                 </{% if widget_type == 'checkbox_select_multiple' %}legend{% else %}label{% endif %}>
                                                 {% if widget_type == 'checkbox_select_multiple' %}<p class="form-item__instruction">{{ field.help_text|default:'Select all that apply' }}</p>{% endif %}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}<div class="{{ widget_type }}">{% endif %}
