--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes--large.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes--large.html
@@ -8,30 +8,35 @@
     {% endif %}
 
     {% for related_section in related_sections %}
-        <div class="related-content__group grid" data-group="{{ forloop.counter }}">
-            {% for related_item in related_section.related_items %}
-                <div class="related-content__meta">
-                    <p class="related-content__title heading heading--five">
-                        <a
-                            href="{% pageurl related_item %}"
-                            class="related-content__link link link--tertiary"
-                            data-related-title
-                            data-target-image="{{ forloop.counter }}"
-                            data-parent-group={{ forloop.parentloop.counter }}
-                        >
-                            {{ related_item.title }}
-                        </a>
-                    </p>
-                    <p class="related-content__degree body body--one">{% firstof related_item.degree_level related_item.programme_type %}</p>
-                </div>
-                <p class="related-content__copy body body--one">
-                    {% firstof related_item.programme_description_subtitle related_item.introduction related_item.listing_summary %}
-                </p>
-                {% image related_item.hero_image fill-500x500 as programme_image %}
-                <div class="related-content__image-container">
-                    <img class="related-content__image {% if forloop.first %}is-visible{% endif %}" src="{{ programme_image.url }}" alt="{{ programme_image.alt }}" data-image="{{ forloop.counter }}">
-                </div>
-            {% endfor %}
+        <div class="related-content__group" data-group="{{ forloop.counter }}">
+            <div class="related-content__listing">
+                {% for related_item in related_section.related_items %}
+                    <div class="related-content__item grid" typeof="schema:Course">
+                        <meta property="schema:provider" content="Royal College of Art" />
+                        <div class="related-content__meta">
+                            <h3 class="related-content__title heading heading--five" property="schema:name">
+                                <a
+                                    href="{% pageurl related_item %}"
+                                    class="related-content__link link link--tertiary"
+                                    data-related-title
+                                    data-target-image="{{ forloop.counter }}"
+                                    data-parent-group={{ forloop.parentloop.counter }}
+                                >
+                                    {{ related_item.title }}
+                                </a>
+                            </h3>
+                            <p class="related-content__degree body body--one" property="schema:EducationalCredentialAwarded">{% firstof related_item.degree_level related_item.programme_type %}</p>
+                        </div>
+                        <p class="related-content__copy body body--one" property="schema:description">
+                            {% firstof related_item.programme_description_subtitle related_item.introduction related_item.listing_summary %}
+                        </p>
+                        {% image related_item.hero_image fill-500x500 as programme_image %}
+                        <div class="related-content__image-container">
+                            <img class="related-content__image {% if forloop.first %}is-visible{% endif %}" src="{{ programme_image.url }}" alt="{{ programme_image.alt }}" data-image="{{ forloop.counter }}" property="schema:image">
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
     {% endfor  %}
 </div>
