--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes--large.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes--large.html
@@ -1,6 +1,6 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
-<div class="related-content related-content--large">
+<div class="related-content related-content--large related-content--meta-new-line">
     {% if title %}
         <div class="section__row grid">
             <h2 class="related-content__heading heading heading--two">{{ title }}</h2>
