Amend hardcoded title of News & Events

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -81,7 +81,7 @@
             </div>
             <div class="section__row">
                 <header class="section__header grid">
-                    <h3 class="section__heading section__heading--primary heading heading--two">News & events</h3>
+                    <h3 class="section__heading section__heading--primary heading heading--two">What&#39;s happening at the RCA</h3>
                 </header>
                 <div class="section__content grid">
                     {% include "patterns/organisms/news/news_api_content.html" with news=news_and_events %}
