--- a/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
@@ -1,5 +1,5 @@
 {% extends "patterns/base_page.html" %}
-{% load wagtailcore_tags wagtailimages_tags util_tags static %}
+{% load wagtailcore_tags wagtailimages_tags util_tags static wagtailsettings_tags %}
 
 {% block body_class %}
     app app--form no-hero theme-light
@@ -31,6 +31,20 @@
         <section class="section bg bg--dark">
             {% if form %}
                 <form action="." method="post" class="form {% if form.errors %}form--errors{% endif %} grid layout">
+                    <div class="layout__start-one layout__span-two layout__@large-span-one">
+                        <div class="key-details">
+                            <div class="key-details__header">
+                                <h3 class="heading heading--five key-details__heading">Key details</h3>
+                            </div>
+                                <div class="key-details__section key-details__section--location">
+                                    <ul class="key-details__list">
+                                        <li class="key-details__list-item">
+                                            {{ settings.enquire_to_study.EnquiryFormKeyDetails.content|richtext }}
+                                        </li>
+                                    </ul>
+                                </div>
+                        </div>
+                    </div>
                     <div class="form__container layout__start-one layout__@large-start-two layout__span-two layout__@large-span-three">
                         <div class="form__content section section--top-space-large">
                             {% csrf_token %}
