--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -75,7 +75,7 @@ app--form no-hero
                                                     {% endif %}
                                                     {% if field.field.required %}<span aria-hidden="true" class="form-item__required">*</span>{% endif %}
                                                 </{% if widget_type == 'checkbox_select_multiple' %}legend{% else %}label{% endif %}>
-                                                {% if widget_type == 'checkbox_select_multiple' %}<p class="form-item__instruction">{{ field.help_text|default:'Select all that apply' }}</p>{% endif %}
+                                                {% if widget_type == 'checkbox_select_multiple' %}<p class="form-item__instruction">{{ field.help_text|richtext|default:'Select all that apply' }}</p>{% endif %}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}<div class="{{ widget_type }}">{% endif %}
                                                 {{ field }}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}</div>{% endif %}
@@ -83,7 +83,7 @@ app--form no-hero
 
                                         </{% if widget_type == 'checkbox_select_multiple' %}fieldset{% else %}div{% endif %} >
 
-                                        {% if field.help_text and widget_type != 'checkbox_select_multiple' %}<div class="form-item__help">{{ field.help_text }}</div>{% endif %}
+                                        {% if field.help_text and widget_type != 'checkbox_select_multiple' %}<div class="form-item__help">{{ field.help_text|richtext }}</div>{% endif %}
 
                                     </div>
                                 {% endwith %}
