Giving multi-select a min height

--- a/rca/static_src/sass/components/_form-item.scss
+++ b/rca/static_src/sass/components/_form-item.scss
@@ -223,6 +223,12 @@
         }
     }
 
+    &--multiple_choice_field {
+        select {
+            min-height: 150px;
+        }
+    }
+
     &--textarea {
         #{$root}__container {
             width: 100%;
