--- a/rca/static_src/sass/components/_form-item.scss
+++ b/rca/static_src/sass/components/_form-item.scss
@@ -331,6 +331,8 @@
         appearance: none;
         width: 29px;
         height: 29px;
+        min-width: 29px;
+        max-width: 29px;
         border: 3px solid $color--white;
         background-color: transparent;
         opacity: 0.3;
