--- a/rca/static_src/sass/components/_form-item.scss
+++ b/rca/static_src/sass/components/_form-item.scss
@@ -244,7 +244,7 @@
         #{$root}__container {
             display: flex;
             flex-direction: row;
-            align-items: center;
+            align-items: flex-start;
         }
 
         label {
