Remove funding options and various field re-works

--- a/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
@@ -21,7 +21,7 @@
         </div>
         <div class="introduction grid">
             <p class="introduction__text introduction__text--no-margin heading heading--five layout__@large-start-three layout__span-two">
-                Please fill in your details below and we will send your relevant information about your programme of interest, open days and application deadlines.
+                Please fill in your details below and we will send your relevant information about your programmes of interest, open days and application deadlines.
             </p>
         </div>
     </div>
