--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -38,16 +38,14 @@
                             {{ page.first_name }}
                             {{ page.last_name }}
                         </h1>
-                        {% for student_type in page.student_types.all %}
-                            <h2 class="title-area__sub-heading body body--one">{{ student_type.type }}</h2>
-                        {% endfor %}
+
                     {% endif %}
 
                     {% if page.programme %}
                         <div class="title-area__job-titles">
                             <div class="job-titles">
                                 <ul class="job-titles__item">
-                                    <li class="job-titles__title">Completed PhD student - 2019</li>
+                                <li class="job-titles__title">{{ page.degree_status }} {{ page.degree_type }} student {% if page.degree_end_date %}- {{ page.degree_end_date|date:'Y' }}{% endif %}</li>
                                     <li class="job-titles__department" property="schema:award">
                                         <a class="body body--two link link--tertiary" href="#">{{ page.programme }}</a>
                                     </li>
@@ -102,7 +100,7 @@
                     <div class="section__row {% if page.student_gallery %}section__row--last{% else %}section__row--last-large{% endif %} research-highlights">
                         <div class="section__header grid">
                             <h2 class="section__heading section__heading--primary heading heading--four">
-                                {{ page.research_highlights_title|default:"Research Highlights" }}
+                                Research projects
                             </h2>
                         </div>
                         <div class="section__content grid">
