--- a/rca/static_src/sass/base/_base.scss
+++ b/rca/static_src/sass/base/_base.scss
@@ -30,6 +30,10 @@ html {
             scroll-padding-top: 130px;
         }
     }
+
+    &.no-scroll-behavoir {
+        scroll-behavior: auto;
+    }
 }
 
 body {
