--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -5,11 +5,7 @@
     app--form
 {% endblock %}
 
-{% block html_class %}
-    no-scroll-behavoir
-{% endblock %}
-
-{% block html_class %}sticky-compensator{% endblock %}
+{% block html_class %}no-scroll-behavoir sticky-compensator{% endblock %}
 
 {% block content %}
 
