--- a/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
@@ -5,7 +5,7 @@
     app app--form no-hero theme-light
 {% endblock %}
 
-{% block html_class %}sticky-compensator{% endblock %}
+{% block html_class %}no-scroll-behavoir sticky-compensator{% endblock %}
 
 {% block content %}
 
