--- a/rca/static_src/sass/components/_form-item.scss
+++ b/rca/static_src/sass/components/_form-item.scss
@@ -439,7 +439,8 @@
             }
         }
 
-        label {
+        label,
+        legend {
             color: $color--light-grey;
         }
 
@@ -558,7 +559,8 @@
             }
         }
 
-        label {
+        label,
+        legend {
             color: $color--dark-grey;
         }
 
