Allowing for rich text in instruction

--- a/rca/static_src/sass/components/_form-item.scss
+++ b/rca/static_src/sass/components/_form-item.scss
@@ -383,6 +383,11 @@
 
     &__instruction {
         @include font-size(xxs);
+        margin: 0 0 20px;
+
+        p {
+            margin: 0;
+        }
     }
 
     input,
