--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -71,7 +71,7 @@ app--form no-hero
                                                     {% endif %}
                                                     {% if field.field.required %}<span aria-hidden="true" class="form-item__required">*</span>{% endif %}
                                                 </{% if widget_type == 'checkbox_select_multiple' or widget_type == 'radio_select' %}legend{% else %}label{% endif %}>
-                                                {% if widget_type == 'checkbox_select_multiple' or widget_type == 'radio_select' %}<p class="form-item__instruction">{{ field.help_text|default:'Select all that apply' }}</p>{% endif %}
+                                                {% if widget_type == 'checkbox_select_multiple' or widget_type == 'radio_select' %}<div class="form-item__instruction">{{ field.help_text|default:'Select all that apply' }}</div>{% endif %}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}<div class="{{ widget_type }}">{% endif %}
                                                 {{ field }}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}</div>{% endif %}
