Moving form error location

--- a/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/enquire_to_study/enquire_form_page.html
@@ -19,11 +19,20 @@
                 </h1>
             </div>
         </div>
+        {% if page.introduction or form.errors %}
         <div class="introduction grid">
-            <p class="introduction__text introduction__text--no-margin heading heading--five layout__@large-start-three layout__span-two">
-                Please fill in your details below and we will send your relevant information about your programmes of interest, open days and application deadlines.
+            {% if page.introduction %}
+            <p class="introduction__text {% if not form.errors %}introduction__text--no-margin{% endif %} heading heading--five layout__@large-start-three layout__span-two">
+                {{ page.introduction }}
             </p>
+            {% endif %}
+            {% if form.errors %}
+                <p class="introduction__errors introduction__text--no-margin heading heading--five layout__@large-start-three layout__span-two">
+                    There were some errors with your form. Please amend the fields highlighted below.
+                </p>
+            {% endif %}
         </div>
+        {% endif %}
     </div>
 
     <div class="page__content">
@@ -48,12 +57,6 @@
                     <div class="form__container layout__start-one layout__@large-start-two layout__span-two layout__@large-span-three">
                         <div class="form__content section section--top-space-large">
                             {% csrf_token %}
-
-                            {% if form.errors %}
-                                <div class="form__errors">
-                                    There were some errors with your form. Please amend the fields highlighted below.
-                                </div>
-                            {% endif %}
 
                             {% for field in form %}
 
