Fixing sticky nav anchor point

--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -158,8 +158,8 @@
             {% endif %}
 
             {# Research #}
-            {% if not stats_block %}<span class="schools__anchor-compensator" id="research"></span>{% endif %}
-            <section class="schools__research section {% if stats_block %}section--start {% else %}section--top-space-small {% endif %} bg bg--dark anchor-heading" {% if stats_block %}id="research"{% endif %}>
+            {% if not stats_block %}<span class="schools__anchor-compensator anchor-heading" id="research"></span>{% endif %}
+            <section class="schools__research section {% if stats_block %}section--start anchor-heading {% else %}section--top-space-small {% endif %} bg bg--dark" {% if stats_block %}id="research"{% endif %}>
 
                 <div class="section__row section__row--last-small">
                     <div class="section__header section__header--bottom-space grid">
