--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -164,7 +164,7 @@
                     {% endif %}
 
                     {% if page.student_related_links %}
-                        {% include "patterns/organisms/related-links/related-links.html" with related_links=page.student_related_links title="External links" %}
+                        {% include "patterns/organisms/related-links/related-links.html" with related_links=page.student_related_links title="Additional links" %}
                     {% endif %}
                 </section>
             {% endif %}
